--- a/Unit04/Linear Regression_HW.ipynb
+++ b/Unit04/Linear Regression_HW.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x22b0f0d8dc0>"
+       "<matplotlib.legend.Legend at 0x22b133cedf0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -156,10 +156,6 @@
     "plt.ylabel(\"Y\")\n",
     "plt.title(\"Data splitting\")\n",
     "plt.legend()\n",
-    "#匯入在sklearn.linear_model套件裡面的LinearRegression模型\n",
-    "#匯入在sklearn.model_selection套件裡面的train_test_split模組\n",
-    "#切割數據集(訓練資料80%、測試資料20%，設定random_state=20)\n",
-    "#畫出訓練資料集的matplotlib圖形m\n",
     "\n"
    ]
   },
@@ -176,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -191,10 +187,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22b13294370>]"
+       "[<matplotlib.lines.Line2D at 0x22b1380f580>]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -239,20 +235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction of X = 2.44897959 is [4.3025375]\n"
+      "Prediction of X = 2.44897959 is 4.302537504954737\n"
      ]
     }
    ],
    "source": [
     "y_predict = linear_reg.predict(np.array([[2.44897959]]))\n",
-    "print(\"Prediction of X = 2.44897959 is\", y_predict)"
+    "print(\"Prediction of X = 2.44897959 is\", y_predict[0])"
    ]
   },
   {
@@ -264,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -291,16 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x22b1312e850>"
+       "<matplotlib.legend.Legend at 0x22b13779ca0>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
